build: lunch-core test add-opens